--- a/index.html
+++ b/index.html
@@ -13,26 +13,12 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
-    <h2>Hello, world!</h2>
-    <h3>Hello, world!</h3>
-    <h4>Hello, world!</h4>
-    <div class="text_1">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Предложения рекламных маленькая даже заманивший по всей текстов рыбными, что, оксмокс буквенных наш назад запятой до рот свой снова ручеек семантика имеет вопрос
-        своих пор проектах продолжил. Собрал гор, толку текстами журчит переписывается она, сбить возвращайся, ему имеет точках безопасную. Встретил?</div><br><br>
-    <div class="text_2">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Предложения рекламных маленькая даже заманивший по всей текстов рыбными, что, оксмокс буквенных наш назад запятой до рот свой снова ручеек семантика имеет вопрос
-        своих пор проектах продолжил. Собрал гор, толку текстами журчит переписывается она, сбить возвращайся, ему имеет точках безопасную. Встретил?</div><br><br>
-    <div class="text_3">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Предложения рекламных маленькая даже заманивший по всей текстов рыбными, что, оксмокс буквенных наш назад запятой до рот свой снова ручеек семантика имеет вопрос
-        своих пор проектах продолжил. Собрал гор, толку текстами журчит переписывается она, сбить возвращайся, ему имеет точках безопасную. Встретил?</div><br><br>
-    <div class="text_4">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Предложения рекламных маленькая даже заманивший по всей текстов рыбными, что, оксмокс буквенных наш назад запятой до рот свой снова ручеек семантика имеет вопрос
-        своих пор проектах продолжил. Собрал гор, толку текстами журчит переписывается она, сбить возвращайся, ему имеет точках безопасную. Встретил?</div><br><br>
-    <div class="text_5">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Предложения рекламных маленькая даже заманивший по всей текстов рыбными, что, оксмокс буквенных наш назад запятой до рот свой снова ручеек семантика имеет вопрос
-        своих пор проектах продолжил. Собрал гор, толку текстами журчит переписывается она, сбить возвращайся, ему имеет точках безопасную. Встретил?</div><br><br>
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
