--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Hello, world!</title>
+    <title>Pulse</title>
 
     <!-- Bootstrap CSS -->
 
@@ -17,7 +17,48 @@
 
 <body>
 
-    Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Алфавит повстречался рукопись вдали заголовок языком страну дал необходимыми, свое эта. Буквенных, букв. Переписали, своих однажды за рыбного раз великий.
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <div class="header__logo">
+                    <a href="#">
+                        <img src="img/logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="header__official">
+                    <div class="header__official_first">Официальный представитель</div>
+                    <div class="header__official_second">Garmin, Polar, Suunto</div>
+                </div>
+                <div class="header__contacts">
+                    <div class="header__phone"><a href="tel:+74999228974;">+7 (499) 922-89-74</a></div>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subHeader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="img/icons/timer.svg" alt="timer">
+                        <div class="promo__icon-text">Время подбора: <br> 10 минут</div>
+                    </div>
+                    <div class="promo__icon">
+                        <img src="img/icons/app-hand-cart.svg" alt="cart">
+                        <div class="promo__icon-text">Бесплатная <br> доставка</div>
+                    </div>
+                    <div class="promo__icon">
+                        <img src="img/icons/messages.svg" alt="messages">
+                        <div class="promo__icon-text">Ответим <br>на все вопросы</div>
+                    </div>
+                </div>
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 </body>
 
