--- a/index.html
+++ b/index.html
@@ -58,6 +58,35 @@
             </div>
         </div>
     </div>
+
+    <div class="advantages">
+        <div class="container">
+            <div class="advantages__header">Наши преимущества</div>
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <div class="item__icon">
+                        <img src="../img/icons/cup.png" alt="cup">
+                        <div class="item__header">Делимся опытом</div>
+                        <div class="item__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="item__icon">
+                        <img src="../img/icons/heart.png" alt="heart">
+                        <div class="item__header">Заботимся о здоровье</div>
+                        <div class="item__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="item__icon">
+                        <img src="../img/icons/shoe.png" alt="shoe">
+                        <div class="item__header">Учим бегать</div>
+                        <div class="item__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - I LOVE RUNNING.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
