correct media files promo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="item__icon">
                         <img src="img/icons/shoe.png" alt="shoe">
                         <div class="item__header">Учим бегать</div>
-                        <div class="item__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - I LOVE RUNNING.</div>
+                        <div class="item__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span><a href="#"> I LOVE RUNNING.</a></span></div>
                     </div>
                 </div>
             </div>
