--- a/index.html
+++ b/index.html
@@ -87,6 +87,25 @@
             </div>
         </div>
     </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">Получите бесплатную консультацию по подбору пульсометра</h2>
+            <div class="consultation__descr">
+                Просто заполните форму зявки <br> и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input required name="name" type="text" placeholder="Ваше имя">
+                <input required name="phone" type="tel" placeholder="Ваше телефон">
+                <input required name="email" type="email " placeholder="Ваше E-mail">
+
+                <button class="button button_submit">Заказать консультацию</button>
+
+
+
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
