--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
                 <input required name="email" type="email " placeholder="Ваше E-mail">
 
                 <button class="button button_submit">Заказать консультацию</button>
-
-
-
             </form>
         </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
