--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <div class="header__logo">
@@ -57,9 +58,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="advantages">
+    <section class="advantages">
         <div class="container">
             <div class="advantages__header">Наши преимущества</div>
             <div class="advantages__items">
@@ -86,9 +87,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="consultation">
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">Получите бесплатную консультацию по подбору пульсометра</h2>
             <div class="consultation__descr">
@@ -102,8 +103,21 @@
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
         </div>
-    </div>
+    </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div><img src="img/products/slide_1.jpg" alt=""></div>
+                <div><img src="img/products/slide_2.jpg" alt=""></div>
+                <div><img src="img/products/slide_3.jpg" alt=""></div>
+            </div>
+        </div>
+    </section>
 
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
