--- a/index.html
+++ b/index.html
@@ -520,6 +520,71 @@
 
         </div>
     </section>
+    <section class="reviews">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__items">
+                <div class="reviews__item">
+                    <div class="reviews__img"><img src="img/reviews/feed_1.png" alt="1"></div>
+                    <div class="reviews__content">
+                        <div class="reviews__name">Ирина Иванченко</div>
+                        <div class="reviews__tag">2 полумарафона</div>
+                        <div class="reviews__text">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности. Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+                            <br><br> Новые цели - новый гаджет!
+                            <br><br> Спасибо, RunSmart!</div>
+                    </div>
+
+                </div>
+                <div class="reviews__item">
+                    <div class="reviews__img"><img src="img/reviews/feed_2.png" alt="2"></div>
+                    <div class="reviews__content">
+                        <div class="reviews__name">Иван Сёмочкин</div>
+                        <div class="reviews__tag">1 полумарафон</div>
+                        <div class="reviews__text">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили
+                            основы анатомии, составили план тренировок на месяц вперёд.
+                            <br><br> С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+                    </div>
+
+                </div>
+                <div class="reviews__item">
+                    <div class="reviews__img"><img src="img/reviews/feed_3.png" alt="3"></div>
+                    <div class="reviews__content">
+                        <div class="reviews__name">Юлия Дашкина</div>
+                        <div class="reviews__tag">2 полумарафона</div>
+                        <div class="reviews__text">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                            <br><br> Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+                            <br><br> Спасибо!!!
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <footer class="footer">
+        <div class="footer__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3174.117229384382!2d37.64373852685401!3d55.76823282006544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1617660872378!5m2!1sru!2sua"
+                width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div class="footer__info">
+            <div class="footer__adress">
+                Москва, Мясницкий проезд, д.3с1
+            </div>
+            <div class="footer__tel">
+                <a href="tel:+84999228974">8 (499) 922-89-74</a>
+            </div>
+            <div class="footer__social">
+                <a href="#"><img src="img/icons/facebook.svg" alt="facebook"></a>
+                <a href="#"><img src="img/icons/instgram.svg" alt="instgram"></a>
+                <a href="#"><img src="img/icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+
+    </footer>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
