add mask and validate forms

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <form id="consultation-form" class="feed-form" action="#">
                 <input required name="name" type="text" placeholder="Ваше имя">
-                <input required name="phone" type="tel" placeholder="Ваше телефон">
+                <input required name="phone" placeholder="Ваше телефон">
                 <input required name="email" type="email " placeholder="Ваше E-mail">
 
                 <button class="button button_submit">Заказать консультацию</button>
@@ -593,7 +593,7 @@
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_ " action="#">
                 <input name="name" type="text" placeholder="Ваше имя">
-                <input name="phone" type="tel" placeholder="Ваше телефон">
+                <input name="phone" placeholder="Ваше телефон">
                 <input name="email" type="email " placeholder="Ваше E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
 
@@ -605,7 +605,7 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_ " action="#">
                 <input required name="name" type="text" placeholder="Ваше имя">
-                <input required name="phone" type="tel" placeholder="Ваше телефон">
+                <input required name="phone" placeholder="Ваше телефон">
                 <input required name="email" type="email " placeholder="Ваше E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
 
@@ -623,7 +623,8 @@
     <!-- <script type="text/javascript" src="js/slick.min.js"></script>  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
-    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
 
     <script src="js/script.js"></script>
 </body>
