--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
+    <!--   meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pulse</title>
@@ -99,9 +99,9 @@
                 Просто заполните форму зявки <br> и мы перезвоним вам в течении 10 минут
             </div>
             <form id="consultation-form" class="feed-form" action="#">
-                <input required name="name" type="text" placeholder="Ваше имя">
-                <input required name="phone" placeholder="Ваше телефон">
-                <input required name="email" type="email " placeholder="Ваше E-mail">
+                <input name="name" type="text" placeholder="Ваше имя">
+                <input name="phone" placeholder="Ваше телефон">
+                <input name="email" type="email " placeholder="Ваше E-mail">
 
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -604,9 +604,9 @@
             <div class="modal__subtitle">Ваш заказ:</div>
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_ " action="#">
-                <input required name="name" type="text" placeholder="Ваше имя">
-                <input required name="phone" placeholder="Ваше телефон">
-                <input required name="email" type="email " placeholder="Ваше E-mail">
+                <input name="name" type="text" placeholder="Ваше имя">
+                <input name="phone" placeholder="Ваше телефон">
+                <input name="email" type="email " placeholder="Ваше E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
 
             </form>
