--- a/index.html
+++ b/index.html
@@ -617,11 +617,10 @@
             <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
         </div>
     </div>
-    <div class="pageup">
-        <a href="#top">
-            <img src="img/icons/chevron.svg" alt="up1">
-        </a>
-    </div>
+
+    <a href="#top" class="pageup">
+        <img src="img/icons/chevron.svg" alt="up1">
+    </a>
 
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
